kubernetes/apps/security/authentik/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 9443
      targetPort: https
      protocol: TCP
    - name: metrics
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    app.kubernetes.io/name: authentik
